--- a/Stupid_Figure.tex
+++ b/Stupid_Figure.tex
@@ -9,7 +9,7 @@
 
 
 \begin{equation*}
-\frac{\includegraphics[scale=0.5]{figure/Center.png}}{\includegraphics[scale=0.5]{figure/Venn_Diagram.png}}
+\frac{\includegraphics[scale=0.5]{figure/Center_labeled.png}}{\includegraphics[scale=0.5]{figure/Venn_Diagram_labeled_no_TN.png}}
 \end{equation*}
 
 \end{document}
