adding covar figures

--- a/Oral_Proposal.bib
+++ b/Oral_Proposal.bib
@@ -66,3 +66,39 @@
 
 
 
+
+@article{gillebert_automated_2014,
+	title = {Automated delineation of stroke lesions using brain {CT} images},
+	volume = {4},
+	issn = {2213-1582},
+	url = {http://www.sciencedirect.com/science/article/pii/S2213158214000394},
+	doi = {10.1016/j.nicl.2014.03.009},
+	abstract = {Computed tomographic ({CT}) images are widely used for the identification of abnormal brain tissue following infarct and hemorrhage in stroke. Manual lesion delineation is currently the standard approach, but is both time-consuming and operator-dependent. To address these issues, we present a method that can automatically delineate infarct and hemorrhage in stroke {CT} images. The key elements of this method are the accurate normalization of {CT} images from stroke patients into template space and the subsequent voxelwise comparison with a group of control {CT} images for defining areas with hypo- or hyper-intense signals. Our validation, using simulated and actual lesions, shows that our approach is effective in reconstructing lesions resulting from both infarct and hemorrhage and yields lesion maps spatially consistent with those produced manually by expert operators. A limitation is that, relative to manual delineation, there is reduced sensitivity of the automated method in regions close to the ventricles and the brain contours. However, the automated method presents a number of benefits in terms of offering significant time savings and the elimination of the inter-operator differences inherent to manual tracing approaches. These factors are relevant for the creation of large-scale lesion databases for neuropsychological research. The automated delineation of stroke lesions from {CT} scans may also enable longitudinal studies to quantify changes in damaged tissue in an objective and reproducible manner.},
+	pages = {540--548},
+	journaltitle = {{NeuroImage}: Clinical},
+	shortjournal = {{NeuroImage}: Clinical},
+	author = {Gillebert, Céline R. and Humphreys, Glyn W. and Mantini, Dante},
+	urldate = {2014-07-17},
+	date = {2014},
+	keywords = {Computerized tomography, Lesion segmentation, Medical imaging, Software tool, Stroke},
+	file = {ScienceDirect Full Text PDF:/Users/johnmuschelli/Library/Application Support/Zotero/Profiles/9yinbn16.default/zotero/storage/9UX4A9QI/Gillebert et al. - 2014 - Automated delineation of stroke lesions using brai.pdf:application/pdf;ScienceDirect Snapshot:/Users/johnmuschelli/Library/Application Support/Zotero/Profiles/9yinbn16.default/zotero/storage/ZACS7V3K/S2213158214000394.html:text/html}
+}
+
+
+@article{rorden_age-specific_2012,
+	title = {Age-specific {CT} and {MRI} templates for spatial normalization},
+	volume = {61},
+	issn = {1053-8119},
+	url = {http://www.sciencedirect.com/science/article/pii/S1053811912002935},
+	doi = {10.1016/j.neuroimage.2012.03.020},
+	abstract = {Spatial normalization reshapes an individual's brain to match the shape and size of a template image. This is a crucial step required for group-level statistical analyses. The most popular standard templates are derived from {MRI} scans of young adults. We introduce specialized templates that allow normalization algorithms to be applied to stroke-aged populations. First, we developed a {CT} template: while this is the dominant modality for many clinical situations, there are no modern {CT} templates and popular algorithms fail to successfully normalize {CT} scans. Importantly, our template was based on healthy individuals with ages similar to what is commonly seen in stroke (mean 65 years old). This template allows studies where only {CT} scans are available. Second, we derived a {MRI} template that approximately matches the shape of our {CT} template as well as processing steps that aid the normalization of scans from older individuals (including lesion masking and the ability to generate high quality cortical renderings despite brain injury). The benefit of this strategy is that the resulting templates can be used in studies where mixed modalities are present. We have integrated these templates and processing algorithms into a simple {SPM} toolbox (http://www.mricro.com/clinical-toolbox/spm8-scripts).},
+	pages = {957--965},
+	number = {4},
+	journaltitle = {{NeuroImage}},
+	shortjournal = {{NeuroImage}},
+	author = {Rorden, Christopher and Bonilha, Leonardo and Fridriksson, Julius and Bender, Benjamin and Karnath, Hans-Otto},
+	urldate = {2014-01-15},
+	date = {2012-07-16},
+	keywords = {Aging, {CT}, Human, {MRI}, Stroke, Voxel-based lesion symptom mapping},
+	file = {Rorden et al_2012_Age-specific CT and MRI templates for spatial normalization.pdf:/Users/johnmuschelli/Library/Application Support/Zotero/Profiles/9yinbn16.default/zotero/storage/SN4GPRGK/Rorden et al_2012_Age-specific CT and MRI templates for spatial normalization.pdf:application/pdf;ScienceDirect Snapshot:/Users/johnmuschelli/Library/Application Support/Zotero/Profiles/9yinbn16.default/zotero/storage/WRICF9ZZ/S1053811912002935.html:text/html;ScienceDirect Snapshot:/Users/johnmuschelli/Library/Application Support/Zotero/Profiles/9yinbn16.default/zotero/storage/ZX24V5ZM/S1053811912002935.html:text/html}
+}
